--- a/app/controls/posts/posts.latte
+++ b/app/controls/posts/posts.latte
@@ -1,6 +1,16 @@
 {snippet form}
 	{if !isset($disableForm)}
-		{control postForm}
+		{form postForm}
+			<p>{input post}</p>
+			<div class="small-6 column no-padding">{input save}</div>
+			<div class="column small-offset-4 small-2 text-right">
+				<div class="switch tiny">
+					<p><strong>Anonymní příspěvek</strong></p>
+					{input anonymous:}
+					{label anonymous: /}
+				</div>
+			</div>
+		{/form}
 		<hr class="white"/>
 	{/if}
 {/snippet}
@@ -12,8 +22,13 @@
 				<div class="row">
 					<div class="post column small-12">
 						<div class="post-header column small-3">
-							<img class="img-circle" src="{$basePath}/images/{$post->getUser()->getProfilePicture()|img:100}" alt="profile photo" width="100"/>
-							<p>{$post->getUser()->getName()} {$post->getUser()->getSurname()}</p>
+							{if $post->anonymous}
+								<img class="img-circle" src="{$basePath}/images/{$userNoPhoto|img:100}" alt="profile photo" width="100"/>
+								<p>Anonymní</p>
+							{else}
+								<img class="img-circle" src="{$basePath}/images/{$post->getUser()->getProfilePicture()|img:100}" alt="profile photo" width="100"/>
+								<p>{$post->getUser()->getName()} {$post->getUser()->getSurname()}</p>
+							{/if}
 							<p class="left created-date no-margin">{$post->getCreated()|date: "j. n. Y H:i"}</p>
 						</div>
 						<div class="post-content column small-9">
@@ -28,6 +43,7 @@
 		</div>
 	{/if}
 </div>
+
 
 {snippet getMore}
 	{if $fromId}
