--- a/app/presenters/templates/Teaching/default.latte
+++ b/app/presenters/templates/Teaching/default.latte
@@ -17,7 +17,7 @@
 
 					<div class="bottom">
 						<a class="left button secondary tiny" href="#">Zobrazit seznam všech hodin</a>
-						<a class="right button secondary tiny" href="#">Přejít na detail hodiny</a>
+						<a class="right button secondary tiny" href="{link Lesson:default $nextLesson->getId()}">Přejít na detail hodiny</a>
 					</div>
 				</div>
 			</div>
