--- a/scss/app.scss
+++ b/scss/app.scss
@@ -345,3 +345,10 @@ img.no-resize {
   font-size: 12px !important;
   padding: 10px
 }
+
+.switch {
+  p {
+    font-size: 12px;
+    margin-bottom: 3px;
+  }
+}
