--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -2,8 +2,8 @@
 	<div class="row">
 		<div class="post column small-12">
 			<div class="post-header column small-3">
-				<i class="fi-fast-forward"></i>
-				<p>{$lesson->getRank()}. hodina</p>
+				<h1 class="no-margin">{$lesson->getRank()}.</h1>
+				<p>hodina</p>
 
 			</div>
 			<div class="post-content column small-9">
