--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -27,6 +27,7 @@
 			<script src="{$basePath}/js/nette.ajax.js"></script>
 			<script src="{$basePath}/js/netteForms.js"></script>
 			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
+			<script src="{$basePath}/js/switcher.min.js"></script>
 			<script src="{$basePath}/js/autosize.min.js"></script>
 			<script src="{$basePath}/js/angular.min.js"></script>
 			<script src="{$basePath}/js/scrollGlue.js"></script>
