--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -16,6 +16,7 @@
 		<!-- build:css {$basePath}/css/screen.min.css -->
 			<link rel="stylesheet" href="{$basePath}/css/foundation-icons.css" />
 			<link rel="stylesheet" href="{$basePath}/css/foundation-datepicker.css" />
+			<link rel="stylesheet" href="{$basePath}/css/switchery.min.css" />
 			<link rel="stylesheet" href="{$basePath}/css/app.css" />
 		<!-- endbuild -->
 
@@ -27,7 +28,7 @@
 			<script src="{$basePath}/js/nette.ajax.js"></script>
 			<script src="{$basePath}/js/netteForms.js"></script>
 			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
-			<script src="{$basePath}/js/switcher.min.js"></script>
+			<script src="{$basePath}/js/switchery.min.js"></script>
 			<script src="{$basePath}/js/autosize.min.js"></script>
 			<script src="{$basePath}/js/angular.min.js"></script>
 			<script src="{$basePath}/js/scrollGlue.js"></script>
