--- a/app/controls/posts/posts.latte
+++ b/app/controls/posts/posts.latte
@@ -1,22 +1,20 @@
-{snippet form}
-	{if !isset($disableForm)}
-		<div class="row">
-			<div class="column small-12">
-			{form postForm}
-				<p>{input post}</p>
-				<div class="row">
-					<div class="small-12 medium-6 column">{input save}</div>
-					<div class="column small-12 medium-6 small-only-text-center text-right">
-						{label anonymous: class => strong/}
-						{input anonymous:}
-					</div>
+{if !isset($disableForm)}
+	<div class="row">
+		<div class="column small-12">
+		{form postForm}
+			<p>{input post}</p>
+			<div class="row">
+				<div class="small-12 medium-6 column">{input save}</div>
+				<div class="column small-12 medium-6 small-only-text-center text-right">
+					{label anonymous: class => strong/}
+					{input anonymous:}
 				</div>
-			{/form}
 			</div>
+		{/form}
 		</div>
-		<hr class="white"/>
-	{/if}
-{/snippet}
+	</div>
+	<hr class="white"/>
+{/if}
 
 <div n:snippet="posts" data-ajax-append="true">
 	{if count($posts)}
@@ -24,17 +22,26 @@
 			{foreach $posts as $post}
 				<div class="row">
 					<div class="post column small-12">
-						<div class="post-header column small-3">
-							{if $post->anonymous}
-								<img class="img-circle" src="{$basePath}/images/{$userNoPhoto|img:100}" alt="profile photo" width="100"/>
-								<p>Anonymní</p>
-							{else}
-								<img class="img-circle" src="{$basePath}/images/{$post->getUser()->getProfilePicture()|img:100}" alt="profile photo" width="100"/>
-								<p>{$post->getUser()->getName()} {$post->getUser()->getSurname()}</p>
-							{/if}
-							<p class="left created-date no-margin">{$post->getCreated()|date: "j. n. Y H:i"}</p>
+						<div class="post-header column small-12 medium-3">
+							<div class="small-6 medium-12 column">
+								{if $post->anonymous}
+									<img class="img-circle" src="{$basePath}/images/{$userNoPhoto|img:100}" alt="profile photo" width="100"/>
+								{else}
+									<img class="img-circle" src="{$basePath}/images/{$post->getUser()->getProfilePicture()|img:100}" alt="profile photo" width="100"/>
+								{/if}
+							</div>
+
+							<div class="small-6 medium-12 column no-padding">
+								{if $post->anonymous}
+									<p>Anonymní</p>
+								{else}
+									<p>{$post->getUser()->getName()} {$post->getUser()->getSurname()}</p>
+								{/if}
+								<p class="small-12 medium-6 column small-only-text-center text-left created-date no-margin no-padding">{$post->getCreated()|date: "j. n. Y - H:i"}</p>
+								<p class="small-12 medium-6 column small-only-text-center text-right created-date no-margin no-padding">{$post->getLocation()}</p>
+							</div>
 						</div>
-						<div class="post-content column small-9">
+						<div class="post-content column small-12 medium-9">
 							<p>{$post->getText()}</p>
 							<div class="bottom">
 								{control comments-$post->id}
