--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9342,66 +9342,75 @@ td > .button {
 /* line 172, ../../scss/app.scss */
 .post .post-header {
   background-color: #ECECEC;
-  width: 24.5%;
   text-align: center;
   padding: 10px;
 }
-/* line 179, ../../scss/app.scss */
+/* line 178, ../../scss/app.scss */
 .post .post-header i {
   line-height: 1em;
   font-size: 90px;
 }
-/* line 185, ../../scss/app.scss */
+/* line 184, ../../scss/app.scss */
 .post .post-content {
   padding: 20px;
   background-color: #BFBFBF;
 }
-/* line 189, ../../scss/app.scss */
+/* line 188, ../../scss/app.scss */
 .post .post-content .button {
   margin: 0;
 }
-/* line 194, ../../scss/app.scss */
+/* line 193, ../../scss/app.scss */
 .post .created-date {
   font-size: 12px;
   color: #818181;
 }
 
-/* line 201, ../../scss/app.scss */
+/* line 200, ../../scss/app.scss */
 .posts .post-content {
   padding-bottom: 0;
 }
-/* line 206, ../../scss/app.scss */
+/* line 205, ../../scss/app.scss */
 .posts .bottom a {
   color: white;
 }
-/* line 209, ../../scss/app.scss */
+/* line 208, ../../scss/app.scss */
 .posts .bottom a i {
   font-size: 30px;
 }
 
-/* line 216, ../../scss/app.scss */
+/* line 215, ../../scss/app.scss */
 hr.white {
   border: 1px solid white;
 }
 
 @media only screen {
-  /* line 221, ../../scss/app.scss */
+  /* line 220, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 200px;
   }
+
+  /* line 224, ../../scss/app.scss */
+  .post-header {
+    width: 24.5%;
+  }
 }
 @media only screen and (max-width: 40em) {
-  /* line 227, ../../scss/app.scss */
+  /* line 230, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 0;
   }
 
-  /* line 231, ../../scss/app.scss */
+  /* line 234, ../../scss/app.scss */
+  .post-header {
+    width: 100%;
+  }
+
+  /* line 238, ../../scss/app.scss */
   .small-full {
     width: 100%;
   }
 }
-/* line 237, ../../scss/app.scss */
+/* line 244, ../../scss/app.scss */
 #chat-popups {
   position: fixed;
   bottom: 0;
@@ -9409,13 +9418,13 @@ hr.white {
   padding-right: 200px;
   height: 280px;
 }
-/* line 244, ../../scss/app.scss */
+/* line 251, ../../scss/app.scss */
 #chat-popups .chat-popup {
   width: 250px;
   height: 280px;
   margin-right: 20px;
 }
-/* line 249, ../../scss/app.scss */
+/* line 256, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header {
   font-size: 12px;
   font-weight: bold;
@@ -9424,13 +9433,13 @@ hr.white {
   padding: 5px 10px;
   color: white;
 }
-/* line 258, ../../scss/app.scss */
+/* line 265, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header.minimize {
   position: fixed;
   bottom: 0;
   width: 250px;
 }
-/* line 264, ../../scss/app.scss */
+/* line 271, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-text {
   height: 220px;
   background: white;
@@ -9438,17 +9447,17 @@ hr.white {
   border-right: 1px solid lightgray;
   overflow-y: scroll;
 }
-/* line 272, ../../scss/app.scss */
+/* line 279, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation {
   list-style-type: none;
   margin: 0;
   padding: 10px;
 }
-/* line 277, ../../scss/app.scss */
+/* line 284, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation li {
   margin-bottom: 15px;
 }
-/* line 284, ../../scss/app.scss */
+/* line 291, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble {
   position: relative;
   padding: 5px;
@@ -9458,19 +9467,19 @@ hr.white {
   font-size: 12px;
   width: 190px;
 }
-/* line 294, ../../scss/app.scss */
+/* line 301, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left {
   background: #e0e0e0;
   margin-left: 5px;
   float: right;
 }
-/* line 301, ../../scss/app.scss */
+/* line 308, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right {
   margin-right: 5px;
   float: left;
   background: #DBF4FF;
 }
-/* line 307, ../../scss/app.scss */
+/* line 314, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble:after {
   content: "";
   position: absolute;
@@ -9480,34 +9489,34 @@ hr.white {
   width: 0;
   z-index: 1;
 }
-/* line 317, ../../scss/app.scss */
+/* line 324, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left:after {
   left: -7px;
   border-width: 5px 7px 5px 0;
   border-color: transparent #e0e0e0;
 }
-/* line 323, ../../scss/app.scss */
+/* line 330, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right:after {
   right: -7px;
   border-width: 5px 0 5px 7px;
   border-color: transparent #DBF4FF;
 }
-/* line 330, ../../scss/app.scss */
+/* line 337, ../../scss/app.scss */
 #chat-popups .chat-popup input {
   height: 30px;
 }
 
-/* line 338, ../../scss/app.scss */
+/* line 345, ../../scss/app.scss */
 .cursor-pointer {
   cursor: pointer;
 }
 
-/* line 342, ../../scss/app.scss */
+/* line 349, ../../scss/app.scss */
 img.no-resize {
   max-width: none;
 }
 
-/* line 346, ../../scss/app.scss */
+/* line 353, ../../scss/app.scss */
 .comment {
   background-color: #d3d3d3;
   margin-bottom: 15px;
@@ -9515,13 +9524,13 @@ img.no-resize {
   padding: 10px;
 }
 
-/* line 354, ../../scss/app.scss */
+/* line 361, ../../scss/app.scss */
 .switch p {
   font-size: 12px;
   margin-bottom: 3px;
 }
 
-/* line 360, ../../scss/app.scss */
+/* line 367, ../../scss/app.scss */
 .strong {
   font-weight: bold;
 }
