--- a/app/controls/menu/menu.latte
+++ b/app/controls/menu/menu.latte
@@ -57,15 +57,25 @@
 
 		<ul class="right" n:if="$lessonId">
 			<li class="active">
-				<a href="#" class="button" data-reveal-id="myModal">Zadat...</a>
+				<a href="#" class="button" data-reveal-id="newActivity">Zadat...</a>
 			</li>
 		</ul>
 	</section>
 </nav>
 
-<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" n:if="$lessonId">
-	<h2 id="modalTitle">Awesome. I have it.</h2>
-	{control newActivity}
+<div id="newActivity" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog" n:if="$lessonId && $user->isInRole('teacher')">
+	<div class="new-activity">
+		{control newActivity}
+	</div>
 
 	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
+
+
+{if isset($openModal) && $openModal}
+	<script>
+		$(document).ready(function() {
+			$("newActivity").foundation('reveal', 'open');
+		})
+	</script>
+{/if}
