--- a/scss/app.scss
+++ b/scss/app.scss
@@ -374,3 +374,18 @@ img.no-resize {
 .strong {
   font-weight: bold;
 }
+
+.activities {
+  background-color: $grey;
+  ul {
+	li {
+  		font-size: 13px;
+	}
+  }
+}
+
+h3 {
+	font-size: 14px;
+  	font-weight: bold;
+}
+
