--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -16,6 +16,7 @@
 		<!-- build:css {$basePath}/css/screen.min.css -->
 			<link rel="stylesheet" href="{$basePath}/css/foundation-icons.css" />
 			<link rel="stylesheet" href="{$basePath}/css/foundation-datepicker.css" />
+			<link rel="stylesheet" href="{$basePath}/css/foundation-datetimepicker.css" />
 			<link rel="stylesheet" href="{$basePath}/css/switchery.min.css" />
 			<link rel="stylesheet" href="{$basePath}/css/app.css" />
 		<!-- endbuild -->
@@ -25,6 +26,7 @@
 			<script src="{$basePath}/js/jquery.min.js"></script>
 			<script src="{$basePath}/js/foundation.min.js"></script>
 			<script src="{$basePath}/js/foundation-datepicker.js"></script>
+			<script src="{$basePath}/js/foundation-datetimepicker.js"></script>
 			<script src="{$basePath}/js/nette.ajax.js"></script>
 			<script src="{$basePath}/js/netteForms.js"></script>
 			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
