--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -5,9 +5,24 @@
 			<p>Žádné otázky pro tuto hodinu</p>
 		{else}
 			<ul class="unstyled no-margin">
+				{snippet questions}
 				{foreach $activities['questions'] as $question}
-					<li><a href="#">{$question->getQuestionText()}</a></li>
+					<li>
+						{snippet question-$question->id}
+						<a href="#">{$question->getQuestionText()}</a>
+						{if $user->isInRole('teacher')}
+							<a href="{link toggleQuestion! $question->getId()}" class="ajax">
+							{if $question->isVisible()}
+								<span class="label success">viditelná</span>
+							{else}
+								<span class="label alert">skrytá</span>
+							{/if}
+							</a>
+						{/if}
+						{/snippet}
+					</li>
 				{/foreach}
+				{/snippet}
 			</ul>
 		{/if}
 		<hr class="white"/>
