--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -9,7 +9,7 @@
 				{foreach $activities['questions'] as $question}
 					<li>
 						{snippet question-$question->id}
-						<a href="#">{$question->getQuestionText()}</a>
+						<a class="myAjax" href="{link loadQuestion! $question->getId()}" data-reveal-id="questionModal">{$question->getQuestionText()}</a>
 						{if $user->isInRole('teacher')}
 							<a href="{link toggleQuestion! $question->getId()}" class="ajax">
 							{if $question->isVisible()}
@@ -67,6 +67,43 @@
 	<hr class="white"/>
 
 	{control posts}
+
+
+
+	<div id="questionModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+		<h1></h1>
+		{snippet questionModal}
+		{if !isset($questionActivity)}
+			<div class="text-center">
+				<img src="{$basePath}/images/spinner-bubble.svg" alt=""/>
+			</div>
+		{else}
+			<p class="lead">{$questionActivity->getQuestionText()}</p>
+			{control answerForm}
+		{/if}
+		{/snippet}
+		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+	</div>
+
+	<div id="taskModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+		{snippet taskModal}
+			<div class="text-center">
+				<img src="{$basePath}/images/spinner-bubble.svg" alt=""/>
+			</div>
+		{/snippet}
+		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+	</div>
+
+	<div id="examModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+		{snippet examModal}
+			<div class="text-center">
+				<img src="{$basePath}/images/spinner-bubble.svg" alt=""/>
+			</div>
+		{/snippet}
+		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+	</div>
+
+
 {/block}
 
 {block head}
