--- a/app/forms/activity/questionForm.latte
+++ b/app/forms/activity/questionForm.latte
@@ -55,6 +55,14 @@
 			{/foreach}
 			{input choiceOptions-add}
 		</div>
+
+		<div class="small-12 column" id="textQuestion">
+			<div class="row">
+				<div class="small-12">
+					{label correctAnswer/}
+					{input correctAnswer}
+				</div>
+			</div>
 		<hr/>
 		<div class="small-12 column">
 			{input save}
