--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -55,7 +55,17 @@
 				<p>hodina</p>
 			</div>
 			<div class="post-content column small-9">
-				<div id="lessonName" {if $user->isInRole('teacher')}contenteditable="true"{/if}><p class="no-margin"><strong>{if $lesson->getName()}{$lesson->getName()}{else}{$lesson->getRank()}. hodina{/if}</strong></p></div>
+				<div id="lessonName" {if $user->isInRole('teacher')}contenteditable="true"{/if}>
+					<p class="no-margin">
+						<strong>
+							{if $lesson->getName()}
+								{$lesson->getName()}
+							{else}
+								{$lesson->getRank()}. hodina
+							{/if}
+						</strong>
+					</p>
+				</div>
 				<hr class="white no-margin"/>
 				<div id="lessonDescription" {if $user->isInRole('teacher')}contenteditable="true"{/if}>
 				{if $lesson->getDescription()}
@@ -77,7 +87,6 @@
 
 
 	<div id="questionModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-		<h1></h1>
 		{snippet questionModal}
 		{if !isset($questionActivity)}
 			<div class="text-center">
@@ -87,12 +96,66 @@
 			<p class="lead">{$questionActivity->getQuestionText()}</p>
 			{if $user->isInRole('teacher')}
 				<ul class="tabs" data-tab>
-					<li class="tab-title active"><a href="#questionSummary">Souhrn odpovědí</a></li>
+					<li class="tab-title active"><a href="#questionSummary">Souhrn odpovědí</i></a></li>
 					<li class="tab-title"><a href="#questionEdit">Editace otázky</a></li>
 				</ul>
+
 				<div class="tabs-content">
+					<a href="{link loadQuestion! $questionActivity->getId()}" class="button right tiny secondary question">
+						<span>
+							<i style="font-size: 20px" class="fi-refresh"></i>
+						</span>
+					</a>
+					<hr/>
 					<div class="content active" id="questionSummary">
+
+						<div class="clearfix"></div>
 						<div id="questionChart"></div>
+						<hr/>
+						<div class="small-12">
+							{if $questionActivity->getAnswers()->count()}
+								<table class="small-12">
+									<thead>
+									<tr>
+										<th>Jméno a příjmení</th>
+										<th>{if $questionActivity->getQuestionType() == 'multiplechoice'}Odpovědi{else}Odpověď{/if}</th>
+										{if $questionActivity->isReasonRequire()}
+											<th>Zdůvodnění</th>
+										{/if}
+										<th>Úspěšnost v %</th>
+									</tr>
+									</thead>
+									<tbody>
+									{foreach $questionActivity->getAnswers() as $answer}
+										<tr>
+											<td>{$answer->getStudent()->getName()} {$answer->getStudent()->getSurname()}</td>
+											{if $questionActivity->getQuestionType() == 'text'}
+												<td>{$answer->getAnswerText()}</td>
+											{else}
+												<td>
+													{foreach $answer->getOptions() as $option}
+														{$option->getOptionText()} {sep},{/sep}
+													{/foreach}
+												</td>
+											{/if}
+											{if $questionActivity->isReasonRequire()}
+												<td>{$answer->getReason()}</td>
+											{/if}
+											<td contenteditable="true" class="points" data-answer-id="{$answer->getId()}">
+												{if $answer->getPoints() === null}
+													<span class="label alert">čeká na ohodnocení</span>
+												{else}
+													{$answer->getPoints()}
+												{/if}
+											</td>
+										</tr>
+									{/foreach}
+									</tbody>
+								</table>
+							{else}
+								<div class="panel">Zatím žádné odpovědi</div>
+							{/if}
+						</div>
 					</div>
 					<div class="content" id="questionEdit">
 						editace
@@ -142,17 +205,6 @@
 		<script type="text/javascript" src="{$basePath}/js/google.jsapi.js"></script>
 		<script type="text/javascript">
 			google.load("visualization", "1", { packages:["corechart"] });
-
-			function drawChart(id, data, options) {
-
-				var options = {
-					title: 'Úpěšnost odpovědí v %'
-				};
-
-				var chart = new google.visualization.PieChart(document.getElementById(id));
-
-				chart.draw(google.visualization.arrayToDataTable(data), options);
-			}
 
 			$(document).ready(function(){
 				$(document).on('opened.fndtn.reveal', '[data-reveal]', function () {
@@ -204,7 +256,48 @@
 				})
 
 
-				$(".question").click(function() {
+				var prevDataPoints = '';
+				$(document).on('focus', '.points', function() {
+					if ($(this).html().indexOf('label') > -1) {
+						prevDataPoints = $(this).html();
+						$(this).html('');
+					} else {
+						prevDataPoints = parseInt($(this).text().trim());
+					}
+				});
+
+				$(document).on('blur', '.points', function() {
+					var data = parseInt($(this).text().trim());
+					if (data != prevDataPoints) {
+						if (data < 0 || data > 100) {
+							alert('Úspěšnost musí být mezi 0 - 100 %');
+							$(this).html(prevDataPoints);
+							return false;
+						} else if (isNaN(data)) {
+
+							alert('Úspěšnost musí být číslo');
+							$(this).html(prevDataPoints);
+							return false;
+						}
+						var id = $(this).data('answer-id');
+						$.post({link editAnswer!}, { answerId: id, points: data}).error(function() {
+							alert('Nepodařilo se uložit úspěšnost');
+						}).success(function(e) {
+							if (e['chartData'] !== 'undefined') {
+								console.log(e['chartData']);
+								drawChart("questionChart", JSON.parse(e['chartData']));
+							}
+							$(document).foundation();
+						});
+						$(this).text(data);
+
+					} else {
+						$(this).text(prevDataPoints);
+					}
+				});
+
+
+				$(document).on('click', ".question", function() {
 					var url = $(this).attr("href");
 					$.nette.ajax({
 						url: url
@@ -214,7 +307,16 @@
 						}
 						$(document).foundation();
 					});
+
+					if ($(this).hasClass('button')) {
+						$(this).addClass('disabled');
+						$(this).text("Načítám...");
+					}
+
+					return false;
 				});
+
+
 			})
 
 
